For bug fixes and feature requests please see:

http://sourceforge.net/tracker/?group_id=145016