@@ -2,14 +2,14 @@
 <!DOCTYPE imprimatur PUBLIC 
     "-//Imprimatur DTD 007//EN"
     "http://imprimatur.sourceforge.net/imprimatur-007.dtd">
-<imprimatur port="8180" hostname="localhost">
+<imprimatur port="8080" hostname="localhost">
 	<!-- Test that if there's a test group, the following test is executed -->
 	<test-group></test-group>
 	<test name="single regex failure">
 		<request path="/imprimatur/test_01.html">
 			<response-code value="200" />
 
-			<regex pattern=".*sportive bombination.*" />
+			<regex pattern="sportive bombination" />
 		</request>
 	</test>
 </imprimatur>
